force-app/main/default/objects/System_Master__c/System_Master__c.object-meta.xml
<CustomObject>
    <description>To store systems at different levels along with their parent systems</description>
    <label>System Master</label>
    <nameField>
        <label>System Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>