force-app/main/default/objects/System_Master__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QES</fullName>
            </value>
            <value>
                <fullName>nPhase</fullName>
            </value>
            <value>
                <fullName>QCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>