force-app/main/default/objects/System_Master__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Store the level of each system in a dependency tree</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level - 0</fullName>
            </value>
            <value>
                <fullName>Level - 1</fullName>
            </value>
            <value>
                <fullName>Level - 2</fullName>
            </value>
            <value>
                <fullName>Level - 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>