force-app/main/default/objects/System_Master__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent system of a subsystem</description>
    <label>Parent</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>System Master</relationshipLabel>
    <relationshipName>System_Master</relationshipName>
    <type>Lookup</type>
</CustomField>