force-app/main/default/objects/System_Master__c/fields/Test_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_Instance_ID__c</fullName>
    <label>Test Instance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>