force-app/main/default/objects/System_Master__c/fields/Top_Level_Product__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Product__c</fullName>
    <label>Top Level Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>