force-app/main/default/objects/System_Master__c/validationRules/No_Parent_Check_For_level0.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Parent_Check_For_level0</fullName>
    <active>true</active>
    <description>System at level 0 must not have a parent</description>
    <errorConditionFormula>AND 
( NOT(ISBlank( Parent__c )), 
ISPICKVAL( Level__c, &quot;Level - 0&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>System at level 0 must not have a parent</errorMessage>
</ValidationRule>