force-app/main/default/objects/System_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Name__c</columns>
    <columns>Level__c</columns>
    <columns>Parent__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>