force-app/main/default/objects/System_Master__c/listViews/Level_1.listView-meta.xml
<ListView>
    <fullName>Level_1</fullName>
    <columns>NAME</columns>
    <columns>System_Name__c</columns>
    <columns>Parent__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Level - 1</value>
    </filters>
    <label>Level 1</label>
    <language>en_US</language>
</ListView>